--- a/src/main/resources/templates/client/layout/header.html
+++ b/src/main/resources/templates/client/layout/header.html
@@ -104,6 +104,7 @@
                             </a>
                           </li>
                         </div>
+
                         <div sec:authorize="hasAnyRole('ADMIN')">
                           <li>
                             <a
@@ -127,7 +128,7 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="/admin"
+                              href="/admin/stats/principal"
                               style="
                                 width: 100%;
                                 padding: 10px 20px;
