--- a/src/main/resources/templates/admin/class/addStudent.html
+++ b/src/main/resources/templates/admin/class/addStudent.html
@@ -46,7 +46,11 @@
                 </a>
               </li>
             </ol>
-            <div class="mt-4" sec:authorize="hasRole('VICE_PRINCIPAL')">
+
+            <div
+              class="mt-4"
+              th:if="${permissions.contains('POST /admin/class/student/add/{classId}')}"
+            >
               <div class="row">
                 <form
                   th:action="@{/admin/class/student/add/{id}(id=${currentClass.id})}"
@@ -109,11 +113,7 @@
                     <th>#</th>
                     <th>Họ và tên</th>
                     <th>Email</th>
-                    <th
-                      sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
-                    >
-                      Hành động
-                    </th>
+                    <th>Hành động</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -121,10 +121,9 @@
                     <td th:text="${stat.count}"></td>
                     <td th:text="${cs.student.fullName}"></td>
                     <td th:text="${cs.student.email}"></td>
-                    <td
-                      sec:authorize="hasAnyRole('VICE_PRINCIPAL', 'PRINCIPAL')"
-                    >
+                    <td>
                       <form
+                        th:if="${permissions.contains('POST /admin/class/student/delete/{classId}/{studentId}')}"
                         th:action="@{/admin/class/student/delete/{classId}/{studentId}(classId=${currentClass.id}, studentId=${cs.student.id})}"
                         method="post"
                         style="display: inline"
